# MM2

./: .gitignore  .gitmodules  CLAUDE.md
EXTRACTED/: _doc37_front.md  mm2-ANALYSIS.md  mm2.annotated.asm  mm2.asm  mm2.capstone.annotated.asm  mm2.capstone.asm
editor/: .gitignore  CMakeLists.txt  MM2ED.manifest  MM2ED.rc  README.md
editor/assets/fonts/: mm2_12.json  mm2_16.json  mm2_32.json  mm2_8.json
editor/src/: main.cpp  mm2_imconfig.h
editor/src/app/: App.cpp  App.h  AppState.h  Section.h
editor/src/core/: AreaNames.h  AttribFile.cpp  AttribFile.h  ByteIO.cpp  ByteIO.h  Cartography.h  EventFile.cpp  EventFile.h  EventOps.h  Gfx.cpp  Gfx.h  ItemsFile.cpp  ItemsFile.h  MapFile.cpp  MapFile.h  Mm2BitmapFont.cpp  Mm2BitmapFont.h  MonstersFile.cpp  MonstersFile.h  Outdoor3D.cpp  Outdoor3D.h  Outdoor3DRender.cpp  Outdoor3DRender.h  PcDatLzw.cpp  PcDatLzw.h  PcGfx.cpp  PcGfx.h  RawFile.h  RosterFile.cpp  RosterFile.h  RosterGlobalTail.h  Spells.cpp  Spells.h  SpellsFile.cpp  SpellsFile.h  StrFile.cpp  StrFile.h  View3D.cpp  View3D.h
editor/src/eventlang/: Ast.h  BytecodeParse.cpp  BytecodeParse.h  CfgLift.cpp  CfgLift.h  Decompile.cpp  Decompile.h  DslEmit.cpp  DslEmit.h  DslParse.cpp  DslParse.h  Encode.cpp  Encode.h  Lower.cpp  Lower.h  OpcodeTable.cpp  OpcodeTable.h  Semantics.cpp  Semantics.h  TokenSkip.cpp  TokenSkip.h
editor/src/sections/: AttribSection.cpp  AttribSection.h  EventSection.cpp  EventSection.h  GfxSection.cpp  GfxSection.h  ItemsSection.cpp  ItemsSection.h  MapSection.cpp  MapSection.h  MonstersSection.cpp  MonstersSection.h  PcGfxSection.cpp  PcGfxSection.h  RawSection.cpp  RawSection.h  RosterSection.cpp  RosterSection.h  SpellsSection.cpp  SpellsSection.h  StrSection.cpp  StrSection.h
editor/src/widgets/: HexView.cpp  HexView.h  Mm2EvtEditor.cpp  Mm2EvtEditor.h  Texture.cpp  Texture.h  UiLayout.h  UiTheme.h
editor/tests/: gfx_dump.cpp  pc_dat_check.cpp  view3d_trace.cpp
editor/tools/: mm2evt_dump.cpp
game/: CMakeLists.txt  CMakePresets.json  README.md
game/EXTRACTED/anm_decoded/51/: meta.json
game/cmake/: AmigaVscodeBin.cmake  copy_mm2_data.cmake  mm2-m68k-bartman.cmake
game/event_demos/: README.md
game/include/freestanding_stl/: array  cctype  cstddef  cstdint  cstdio  cstdlib  cstring  initializer_list  vector
game/include/mm2/: Config.h  CppStdCompat.h  DataPath.h  Game.h  GameSession.h  GameState.h  Mm2Dbg.h  TitleScreen.h
game/include/mm2/combat/: CombatSession.h  EncounterPicker.h
game/include/mm2/events/: EventCombatEncounter.h  EventFieldMap.h  EventPartyEffects.h  EventRuntime.h  EventSkillBuy.h  EventTextView.h  EventTownServices.h  EventVmHelpers.h  ScriptedSceneEngine.h  ServiceSignResolver.h  TownServiceMenu.h  TownServiceTransactions.h
game/include/mm2/gameplay/: ExploreActions.h  InGameCharacterSheet.h  InGameControlsScreen.h  Movement.h  PlaySessionInput.h  RosterSkills.h  SpellBook.h
game/include/mm2/gfx/: AmigaPlayScreenLayout.h  AnmPlanarPool.h  AutomapView.h  CombatPanel.h  EnvAssets.h  GfxBackend.h  Mm2FontGlyphs.h  OutdoorView3D.h  PartyStatusFormat.h  PlayScreenChrome.h  ScreenCompositor.h  View3D.h  ViewportAnmOverlay.h  ViewportSignPlacement.h  mm2_font8x8.h
game/include/mm2/platform/: Audio.h  Platform.h
game/include/mm2/platform/amiga/: Mm2AmigaConfig.h  Mm2AmigaDisplay.h  Mm2AmigaPlanar.h  mm2_amiga_audio.h  mm2_amiga_file.h  mm2_fade.h
game/include/mm2/runtime/: Alloc.h  PathScratch.h
game/include/mm2/states/: AppHost.h  mm2_app_context.h  mm2_goto_trace.h  mm2_state.h  mm2_states.h
game/include/mm2/ui/: AmigaCharacterUiLayout.h  CharacterUiController.h  CharacterUiFactory.h  CharacterUiKind.h  ICharacterUi.h  PlayTownServiceUi.h  RosterSkillDisplay.h  UiResult.h
game/include/mm2/world/: AutomapState.h  Cartography.h  MapWorld.h
game/src/: Game.cpp  GameSession.cpp  TitleScreen.cpp  main.cpp  main_amiga.cpp
game/src/combat/: CombatSession.cpp  EncounterPicker.cpp
game/src/events/: EventCombatEncounter.cpp  EventPartyEffects.cpp  EventRuntime.cpp  EventSkillBuy.cpp  EventTextView.cpp  EventTownServices.cpp  EventVmHelpers.cpp  ScriptedSceneEngine.cpp  ServiceSignResolver.cpp  TownServiceMenu.cpp  TownServiceTransactions.cpp
game/src/gameplay/: ExploreActions.cpp  InGameCharacterSheet.cpp  InGameControlsScreen.cpp  Movement.cpp  PlaySessionInput.cpp  RosterSkills.cpp
game/src/gfx/: AnmPlanarPool.cpp  AutomapView.cpp  CombatPanel.cpp  EnvAssets.cpp  GfxBackend.cpp  Mm2Font8x8.inc  Mm2Font8x8_data.inc  OutdoorView3D.cpp  PartyStatusFormat.cpp  PlayScreenChrome.cpp  ScreenCompositor.cpp  View3D.cpp  ViewportAnmOverlay.cpp  mm2_font8x8.c
game/src/platform/: AudioStub.cpp
game/src/platform/amiga/: AudioAmiga.cpp  PlatformAmiga.cpp  mm2_amiga_audio.c  mm2_amiga_display.c  mm2_amiga_file.c  mm2_amiga_planar.c  mm2_fade.c
game/src/platform/sdl/: AudioSDL.cpp  PlatformSDL.cpp
game/src/runtime/: Mm2Alloc.cpp  PathScratch.cpp
game/src/states/: AppHost.cpp  mm2_app_context.c  mm2_app_run.cpp  mm2_goto_trace.c  mm2_state.c  mm2_states.cpp
game/src/ui/: AmigaCharacterUi.cpp  CharacterUiController.cpp  CharacterUiFactory.cpp  CharacterUiKind.cpp  PlayTownServiceUi.cpp  RosterSkillDisplay.cpp  StubCharacterUi.cpp
game/src/world/: AutomapState.cpp  MapWorld.cpp
game/tests/: anm_export.c  anm_export_f0.c  anm_one.cpp  anm_probe.c  automap_golden.cpp  calendar_rollover_test.cpp  character_sheet_input_test.cpp  combat_golden.cpp  combat_setup_test.cpp  create_character_roundtrip.c  event_middlegate_test.cpp  event_op_demo.cpp  event_town_skills_test.cpp  explore_commands_test.cpp  font_golden.cpp  image32_golden.c  movement_middlegate_test.cpp  party_hp_format_test.cpp  pc_gfx_golden.py  pc_gfx_pixels_dump.c  pc_gfx_rgba_dump.c  pc_lzw_dump.c  pc_monsters_rgba_dump.c  playscreen_golden.cpp  playsession_input_test.cpp  roster_tail_test.c  view3d_middlegate_check.cpp  view3d_outdoor_check.cpp  view3d_torch_door_test.cpp
tools/: RE-TOOLS.md  _check_door_mask.py  _check_doors.py  _check_idx0.py  _check_outdoor.py  _check_walls.py  _dump_loc.py  _find_spell_grants.py  _quiz_out.txt  (+241 more)
(+278 files in other folders)
